tools/crates/vendor/toml_edit/tests/fixtures/invalid/control/string-del.stderr
TOML parse error at line 1, column 20
  |
1 | string-del  = "null"
  |                    ^
invalid basic string
